<resources>
    <string name="app_name">Banco Bradesil 1.0</string>
    <string name="qualSenha">Qual é a sua senha?</string>
    <string name="acessarConta">Acessar conta</string>
    <string name="bradesil">Bradesil</string>
    <string name="acessoAconta">Acesso à conta</string>
    <string name="continuar">Continuar</string>
    <string name="informeDados">Informe os seus dados</string>
    <string name="nomeCompleto">Nome completo:</string>
    <string name="criarConta">Criar conta</string>
    <string name="crieSenha">Crie a sua senha:</string>
    <string name="nomeClienteContasCadastradas">Nome do cliente:</string>
    <string name="criarCOntaBotaoMain">Criar conta</string>
    <string name="situacaoCadastro">Situação:</string>
    <string name="numeroContaActivityMain">Nº Conta:</string>
    <string name="nome">Nome: </string>
    <string name="conta">Nº Conta: </string>
    <string name="ol_cliente">Olá Cliente</string>
    <string name="saldoDisponivelActivityConta">Saldo disponível</string>
    <string name="olaCliente">Olá, Cliente</string>
    <string name="saldo">Saldo</string>
    <string name="verExtrato">Ver extrato</string>
    <string name="rsReais">R$</string>
    <string name="faleBia">Fale com a <font color="#d50000">BIA</font> </string>
    <string name="_0_00">0,00</string>
    <string name="QueroRendimentos">Quero meu informe de rendimentos</string>
    <string name="QueroPagarConta">Quero pagar uma conta</string>
    <string name="precisTransferir">Preciso transferir dinheiro</string>
    <string name="lembrarUsuario">Lembrar usuário</string>
    <string name="eMail">E-mail: </string>
    <string name="acessarContas">Acessar outras contas</string>

    <string name="situacaoEmailErroPreenchaOsDados">Preencha os seus dados</string>
    <string name="digiteSuaSenha">Digite a sua senha:</string>
    <string name="digiteSeuEmail">Digite o seu E-mail:</string>
    <string name="nomeCliente"> Nome do cliente</string>
    <string name="eMailCliente"> E-mail do cliente</string>
    <string name="contaCliente"> Conta do cliente</string>
    <string name="sair">Sair</string>
    <string name="menuPrincipal">Menu Principal</string>
    <string name="preenchaCampos">Preencha todos dos campos</string>
    <string name="acessarSuaConta">Acessar sua conta</string>
    <string name="ErroDigiteSenha"> <font color="#F1F60404">ERRO!</font> Digite a sua senha</string>
    <string name="ErroDigiteEmail"> <font color="#F1F60404">ERRO!</font> Digite o seu E-mail</string>
    <string name="ErroSenhaConta"> <font color="#F1F60404">ERRO!</font> E-mail ou senha incorreto</string>
    <string name="AnalisandoDados">Analisando Dados...</string>
    <string name="situacaoErroSenhasDiferentes"><font color="#F1F60404">ERRO! </font> As senhas são incompatíveis</string>
    <string name="situacaoErroRepitaSenha"><font color="#F1F60404">ERRO! </font> Repita a senha</string>
    <string name="situacaoErroPreenchaSenha"> <font color="#F1F60404"> ERRO! </font> Preencha a senha</string>
    <string name="situacaoErroPreenchaNome"> <font color="#F1F60404">ERRO!</font> Preencha o seu nome</string>
    <string name="situacaoErroPreenchaEmail"> <font color="#F1F60404">ERRO!</font> Preencha o seu e-mail</string>
    <string name="situacaoErroSenhaMenos"> <font color="#F1F60404">ERRO!</font> A senha tem menos de 6 dígitos</string>
    <string name="situacaoContaCriadaComSucesso">Conta criada com sucesso!</string>
    <string name="repitaSenha">Repita a sua senha:</string>
    <string name="situacaoErroEmailInvalido"> <font color="#F1F60404">ERRO!</font> O e-mail é inválido</string>
    <string name="situacaoErroCadastrarUsuario"> <font color="#F1F60404">ERRO!</font> Erro ao casdastrar ususário</string>
    <string name="situacaoErroEmailJaCadastrado"> <font color="#F1F60404">ERRO!</font> E-mail já cadastrado ou inválido</string>
    <string name="ErroFalhaAutenticacao"> <font color="#F1F60404">ERRO!</font> Verifique seu e-mail e/ou senha e sua conexão com a internet</string>

</resources>