<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_groud_geral"
    tools:context=".MainActivity">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imageViewSimboloBradesilMainActivityId"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:layout_marginStart="35dp"
        android:scaleType="centerCrop"
        android:src="@drawable/banco_icone"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        app:tint="@color/white01" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/texViewNomeBradesilMainActivityId"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:gravity="center"
        android:text="@string/bradesil"
        android:textColor="@color/white01"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintStart_toEndOf="@+id/imageViewSimboloBradesilMainActivityId"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/imageButtonContasCadastradasMainActivityId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:background="#C00354"
        android:rotation="270"
        android:src="@drawable/botao_baixo2"
        android:tint="@color/white01"
        app:layout_constraintStart_toEndOf="@+id/linerLayoutContasId"
        app:layout_constraintTop_toTopOf="@+id/guideline4" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linerLayoutContasId"
        android:layout_width="350dp"
        android:layout_height="350dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/texViewNomeBradesilMainActivityId">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textViewNomeClienteMainActivityId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="35dp"
            android:hint="@string/nome"
            android:text="@string/nomeCliente"
            android:textColor="@color/white01"
            android:textColorHint="@color/white01"
            android:textSize="30sp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textViewNumeroContaMainActivityId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:hint="@string/conta"
            android:text="@string/numeroContaActivityMain"
            android:textColor="@color/white01"
            android:textColorHint="@color/white01"
            android:textSize="21sp" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="50dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/acessarContaBotaoMainActivityId"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/botao_redondo02"
        android:text="@string/acessarConta"
        android:textAllCaps="false"
        android:textColor="@color/corSecundariaVariante"
        android:textSize="21sp"
        app:backgroundTint="@color/white01"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toBottomOf="@+id/linerLayoutContasId" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/botaoCriarContaMainActivityId"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/botao_redondo02"
        android:text="@string/criarCOntaBotaoMain"
        android:textAllCaps="false"
        android:textColor="@color/corSecundariaVariante"
        android:textSize="21sp"
        app:backgroundTint="@color/white01"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toBottomOf="@+id/acessarContaBotaoMainActivityId" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="120dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="44dp" />

</androidx.constraintlayout.widget.ConstraintLayout>