<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLogin01"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_ground_2"
    tools:context=".ActivityLogin">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imageViewVoltarLoginId"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:scaleType="centerCrop"
        android:src="@drawable/voltar_icone"
        android:tint="@color/white01"
        app:layout_constraintBottom_toTopOf="@+id/guideline14"
        app:layout_constraintStart_toStartOf="@+id/guideline15"
        app:layout_constraintTop_toTopOf="@+id/guideline13" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textViewVoltarLoginId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:gravity="center"
        android:text="@string/acessoAconta"
        android:textColor="@color/white01"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline14"
        app:layout_constraintStart_toEndOf="@+id/imageViewVoltarLoginId"
        app:layout_constraintTop_toTopOf="@+id/guideline13" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linerLayoutContasId"
        android:layout_width="395dp"
        android:layout_height="175dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewVoltarLoginId">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textViewNomeClienteActivityLoginId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="35dp"
            android:hint="@string/nome"
            android:text="@string/nomeCliente"
            android:textColor="@color/white01"
            android:textColorHint="@color/white01"
            android:textSize="30sp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textViewNumeroContaLoginActivityId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:hint="@string/conta"
            android:text="@string/numeroContaActivityMain"
            android:textColor="@color/white01"
            android:textColorHint="@color/white01"
            android:textSize="21sp" />

    </androidx.appcompat.widget.LinearLayoutCompat>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="35dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="89dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="30dp" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="395dp"
        android:background="@drawable/botao_redondo01"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline22">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="15dp"
            android:background="@color/white01"
            android:hint="@string/qualSenha"
            android:inputType="number"
            android:textColorHint="@color/black"
            android:textSize="20sp"
            app:colorControlActivated="?attr/colorOnPrimary"
            app:counterEnabled="true"
            app:counterMaxLength="5"
            app:passwordToggleEnabled="true"
            app:hintTextColor="#0363D8">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextQualSenhaLoginId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/botaoAContinuarActivityLoginId"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginStart="130dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/botao_redondo02"
            android:text="@string/continuar"
            android:textAllCaps="false"
            android:textColor="@color/white01"
            android:textSize="21sp"
            app:backgroundTint="@color/corSecundariaVariante" />


    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="270dp" />


</androidx.constraintlayout.widget.ConstraintLayout>