<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_ground_2"
    tools:context=".ActivityCriarConta">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imageViewVoltarActivityCriarContaId"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="25dp"
        android:scaleType="centerCrop"
        android:src="@drawable/voltar_icone"
        android:tint="@color/white01"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/texTeViewVoltarActivityCriarContaId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/menuPrincipal"
        android:textColor="@color/white01"
        android:textSize="25sp"
        app:layout_constraintStart_toEndOf="@+id/imageViewVoltarActivityCriarContaId"
        app:layout_constraintTop_toTopOf="@id/imageViewVoltarActivityCriarContaId" />

    <View
        android:id="@+id/view01ActivityCriarConta01Id"
        android:layout_width="205dp"
        android:layout_height="1dp"
        android:layout_marginStart="10dp"
        android:background="@color/white01"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageViewVoltarActivityCriarContaId" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imageViewLogintarActivityCriarContaId"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginEnd="10dp"
        android:rotation="180"
        android:scaleType="centerCrop"
        android:src="@drawable/voltar_icone"
        android:tint="@color/white01"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewVoltarActivityCriarContaId" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/texTeViewLoginctivityCriarContaId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:gravity="center"
        android:text="@string/acessarSuaConta"
        android:textColor="@color/white01"
        android:textSize="25sp"
        app:layout_constraintEnd_toStartOf="@id/imageViewLogintarActivityCriarContaId"
        app:layout_constraintTop_toTopOf="@+id/imageViewLogintarActivityCriarContaId" />

    <View
        android:id="@+id/view01ActivityCriarConta02Id"
        android:layout_width="243dp"
        android:layout_height="1dp"
        android:layout_marginEnd="10dp"
        android:background="@color/white01"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageViewLogintarActivityCriarContaId" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearLayoutCompat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:background="@drawable/botao_redondo06"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/texViewInformeDadosCriarContaId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/informeDados"
            android:textColor="@color/black"
            android:textSize="31sp" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp"
            android:hint="@string/nomeCompleto"
            android:inputType="textCapWords|textImeMultiLine"
            android:textSize="20sp"
            app:colorControlActivated="?attr/colorOnPrimary"
            app:endIconDrawable="@drawable/caneta"
            app:endIconMode="custom"
            app:hintTextColor="@color/corSecundaria"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/texViewInformeDadosCriarContaId">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextInformeNomeActivityCriarContaId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="abcdefghijklmnopqrstuvwxykzABCDEFGHIJKLMNOPQRSTUVWXYK Z"
                android:inputType="text"
                android:maxLength="25"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:hint="@string/eMail"
            android:inputType="textCapWords|textImeMultiLine"
            android:textSize="20sp"
            app:colorControlActivated="?attr/colorOnPrimary"
            app:endIconDrawable="@drawable/email"
            app:endIconMode="custom"
            app:hintTextColor="@color/corSecundaria"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextInformeNomeActivityCriarContaId">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextInformeEmailActivityCriarContaId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="abcdefghijklmnopqrstuvwxykzABCDEFGHIJKLMNOPQRSTUVWXYK Z"
                android:inputType="textWebEmailAddress"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:hint="@string/crieSenha"
            android:inputType="number"
            android:textColorHint="@color/black"
            android:textSize="20sp"
            app:colorControlActivated="?attr/colorOnPrimary"
            app:hintTextColor="@color/corSecundaria"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialTextView"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextCriarSenhaActivityCriarContaId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberPassword"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:hint="@string/repitaSenha"
            android:inputType="number"
            android:textColorHint="@color/black"
            android:textSize="20sp"
            app:colorControlActivated="?attr/colorOnPrimary"
            app:hintTextColor="@color/corSecundaria"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialTextView"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextRepitaSenhaActivityCriarContaId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberPassword"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/botaoCriarContaActivityCriarContaId"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/botao_redondo02"
            android:text="@string/criarConta"
            android:textAllCaps="false"
            android:textColor="@color/white01"
            android:textSize="21sp"
            app:backgroundTint="@color/corSecundaria"
            app:layout_constraintStart_toStartOf="@+id/guideline5"
            app:layout_constraintTop_toBottomOf="@+id/linerLayoutContasId" />

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/progressBarMainActivityId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp"
            android:progress="50"
            android:visibility="invisible"
            app:indicatorColor="@color/corSecundariaVariante"
            app:trackColor="@color/black" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textViewSituacaoContaActivityCriarContaId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:text="@string/situacaoCadastro"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/botaoCriarContaActivityCriarContaId" />

        <View
            android:id="@+id/viewId02"
            android:layout_width="wrap_content"
            android:layout_height="5dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:background="@color/cinzaEscuroMenu" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textViewNumeroContaActivityCriarConta01Id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:text="@string/conta"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="Conta:" />

        <View
            android:id="@+id/viewId03"
            android:layout_width="wrap_content"
            android:layout_height="5dp"
            android:layout_marginBottom="35dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:background="@color/cinzaEscuroMenu" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textViewNumeroContaActivityCriarConta02Id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="67dp"
            android:layout_marginTop="-28dp"
            android:textSize="17sp"
            android:textStyle="bold" />


    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="264dp" />


</androidx.constraintlayout.widget.ConstraintLayout>