<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <!--    Sem backGround para não interferir no backGround da View Destino -->

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/pessoa"
                android:tint="@color/white01" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txtVw_nomeCliente_componentDados_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:hint="@string/nome"
                android:text="@string/nome"
                android:textColor="@color/white01"
                android:textColorHint="@color/white01"
                android:textSize="17sp"
                android:textStyle="bold" />


        </androidx.appcompat.widget.LinearLayoutCompat>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/white01" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/email"
                android:tint="@color/white01" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txtVw_emailCliente_componentDados_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:hint="@string/eMail"
                android:text="@string/eMail"
                android:textColor="@color/white01"
                android:textColorHint="@color/white01"
                android:textSize="17sp"
                android:textStyle="bold" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <View
            android:id="@+id/view01ActivityMain01Id"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/white01" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="2dp"
                android:src="@drawable/money_account"
                android:tint="@color/white01" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txtVw_contaCliente_componentDados_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:hint="@string/conta"
                android:text="@string/conta"
                android:textColor="@color/white01"
                android:textColorHint="@color/white01"
                android:textSize="17sp"
                android:textStyle="bold" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/white01" />

        <!--    Sem backGround para não interferir no backGround da View Destino -->

    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.constraintlayout.widget.ConstraintLayout>